remove TextBlocks